feat: move request, response models and mappers to use cases - closes #19, closes #17
