# app/src/main/java/pt/com/francisco/usecases/task/TaskRequest.java
@@ -1,0 +1,52 @@
+package pt.com.francisco.usecases.task;
+
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonTypeName;
+import com.fasterxml.jackson.annotation.JsonValue;
+import lombok.Data;
+
+@JsonTypeName("taskRequest")
+@Data
+public class TaskRequest {
+
+    private String name;
+
+    private String description;
+
+    /** Gets or Sets status */
+    public enum StatusEnum {
+        FINISHED("finished"),
+
+        DOING("doing"),
+
+        NOT_STARTED("not_started");
+
+        private String value;
+
+        StatusEnum(String value) {
+            this.value = value;
+        }
+
+        @JsonValue
+        public String getValue() {
+            return value;
+        }
+
+        @Override
+        public String toString() {
+            return String.valueOf(value);
+        }
+
+        @JsonCreator
+        public static StatusEnum fromValue(String value) {
+            for (StatusEnum b : StatusEnum.values()) {
+                if (b.value.equals(value)) {
+                    return b;
+                }
+            }
+            throw new IllegalArgumentException("Unexpected value '" + value + "'");
+        }
+    }
+
+    private StatusEnum status;
+}
