# app/src/main/java/pt/com/francisco/usecases/task/mappers/TaskRequestMapper.java
@@ -1,10 +1,10 @@
-package pt.com.francisco.frameworks.web.mappers;
+package pt.com.francisco.usecases.task.mappers;
 
 import org.mapstruct.Mapper;
-import org.openapitools.model.TaskRequest;
 import pt.com.francisco.entities.Task;
+import pt.com.francisco.usecases.task.TaskRequest;
 
-@Mapper(componentModel = "spring")
+@Mapper
 public interface TaskRequestMapper {
     Task map(TaskRequest taskRequest);
 }
