# frameworks/src/main/java/pt/com/francisco/frameworks/web/TaskRestController.java
@@ -7,15 +7,13 @@ import java.util.UUID;
 import lombok.RequiredArgsConstructor;
 import org.openapi.spring.openapi_yml.api.TaskApi;
 import org.openapi.spring.openapi_yml.api.TasksApi;
-import org.openapitools.model.TaskRequest;
-import org.openapitools.model.TaskResponse;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.RestController;
-import pt.com.francisco.frameworks.web.mappers.TaskRequestMapper;
-import pt.com.francisco.frameworks.web.mappers.TaskResponseMapper;
 import pt.com.francisco.interfaceadapters.controllers.TaskController;
+import pt.com.francisco.usecases.task.TaskRequest;
+import pt.com.francisco.usecases.task.TaskResponse;
 
 @RestController
 @RequiredArgsConstructor
@@ -23,15 +21,11 @@ import pt.com.francisco.interfaceadapters.controllers.TaskController;
 // TODO: check api @ApiResponse codes for each endpoint
 public class TaskRestController implements TaskApi, TasksApi {
     private final TaskController taskController;
-    private final TaskRequestMapper taskRequestMapper;
-    private final TaskResponseMapper taskResponseMapper;
 
     @Override
     public ResponseEntity<TaskResponse> createNewTask(TaskRequest taskRequest) {
         try {
-            TaskResponse createdTask =
-                    taskResponseMapper.map(
-                            taskController.createNewTask(taskRequestMapper.map(taskRequest)));
+            final TaskResponse createdTask = taskController.createNewTask(taskRequest);
             return new ResponseEntity<>(createdTask, HttpStatus.CREATED);
         } catch (Exception e) {
             return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
@@ -42,7 +36,7 @@ public class TaskRestController implements TaskApi, TasksApi {
     @Override
     public ResponseEntity<TaskResponse> getTask(UUID taskId) {
         try {
-            final TaskResponse task = taskResponseMapper.map(taskController.getTask(taskId));
+            final TaskResponse task = taskController.getTask(taskId);
             return new ResponseEntity<>(task, HttpStatus.OK);
         } catch (NoSuchElementException e) {
             return new ResponseEntity<>(HttpStatus.NOT_FOUND);
@@ -52,9 +46,7 @@ public class TaskRestController implements TaskApi, TasksApi {
     // TODO: check if patch or put
     @Override
     public ResponseEntity<TaskResponse> updateTask(UUID taskId, TaskRequest taskRequest) {
-        final TaskResponse taskResponse =
-                taskResponseMapper.map(
-                        taskController.updateTask(taskId, taskRequestMapper.map(taskRequest)));
+        final TaskResponse taskResponse = taskController.updateTask(taskId, taskRequest);
 
         if (taskResponse.getId().equals(taskId)) {
             return new ResponseEntity<>(taskResponse, HttpStatus.OK);
@@ -64,11 +56,7 @@ public class TaskRestController implements TaskApi, TasksApi {
 
     @Override
     public ResponseEntity<List<TaskResponse>> getAllTasks() {
-        List<TaskResponse> taskResponseList = new ArrayList<>();
-        taskController
-                .getAllTasks()
-                .get()
-                .forEach(task -> taskResponseList.add(taskResponseMapper.map(task)));
+        List<TaskResponse> taskResponseList = new ArrayList<>(taskController.getAllTasks().get());
         return new ResponseEntity<>(taskResponseList, HttpStatus.OK);
     }
 }
