# interfaceAdapters/src/main/java/pt/com/francisco/interfaceadapters/controllers/TaskController.java
@@ -4,26 +4,27 @@ import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 import lombok.RequiredArgsConstructor;
-import pt.com.francisco.entities.Task;
 import pt.com.francisco.usecases.task.TaskInputBoundary;
+import pt.com.francisco.usecases.task.TaskRequest;
+import pt.com.francisco.usecases.task.TaskResponse;
 
 @RequiredArgsConstructor
 public class TaskController {
     private final TaskInputBoundary taskInputBoundary;
 
-    public Task createNewTask(Task task) {
+    public TaskResponse createNewTask(TaskRequest task) {
         return taskInputBoundary.createTask(task);
     }
 
-    public Task getTask(UUID taskId) {
+    public TaskResponse getTask(UUID taskId) {
         return taskInputBoundary.getTask(taskId);
     }
 
-    public Task updateTask(UUID taskId, Task task) {
+    public TaskResponse updateTask(UUID taskId, TaskRequest task) {
         return taskInputBoundary.updateTask(taskId, task);
     }
 
-    public Optional<List<Task>> getAllTasks() {
+    public Optional<List<TaskResponse>> getAllTasks() {
         return Optional.of(taskInputBoundary.getAllTasks().stream().toList());
     }
 }
